<resources>
    <string name="app_name">KRON Tickets</string>
    <string name="login">Login</string>
    <string name="password">Password</string>
    <string name="sign_in">Sign in</string>
    <string name="short_or_long_username">Username length must be between 4 and 32 characters</string>
    <string name="short_or_long_username_briefly">Username length &lt; 4</string>
    <string name="short_or_long_email">Email length must be between 7 and 32 characters</string>
    <string name="short_or_long_email_briefly">Email length &lt; 7</string>
    <string name="short_or_long_password">Password length must be between 6 and 32 characters</string>
    <string name="short_or_long_password_briefly">Password length &lt; 6</string>
    <string name="create_account">Create account</string>
    <string name="forgot_password">Forgot password?</string>
    <string name="sign_up">Sign up</string>
    <string name="email" translatable="false">Email</string>
    <string name="username">Username</string>
    <string name="confirm_password">Confirm password</string>
    <string name="passwords_do_not_match">Passwords do not match</string>
    <string name="passwords_do_not_match_briefly">Passwords dont match</string>
    <string name="no_server_connection">No server connection</string>
    <string name="wrong_email_or_password">Wrong email or password</string>
    <string name="login_as_guest">Login as guest</string>
    <string name="kron_ticket">KRON Ticket</string>
    <string name="LLC">LLC \"CDIA\"</string>
    <string name="home">Home</string>
    <string name="Scanner">Scanner</string>
    <string name="Notifications">Notifications</string>
    <string name="Settings">Settings</string>
    <string name="desc">Description</string>
    <string name="field_object">Field/object</string>
    <string name="service">Service</string>
    <string name="executor">Executor</string>
    <string name="kind">Kind</string>
    <string name="status">Status</string>
    <string name="priority">Priority</string>
    <string name="plane_date">Plane date</string>
    <string name="expiration_date">Expiration date</string>
    <string name="description">Description</string>
    <string name="not_filled">Not filled</string>
    <string name="completed_work">Completed work</string>
    <string name="author">Author</string>
    <string name="date_of_creation">Date of creation</string>
    <string name="tickets">Applications</string>
    <string name="ticket">Application</string>
    <string name="necessarily_star">*</string>
    <string name="add_object">Add object</string>
    <string name="ticket_creations">Add application</string>
    <string name="title">Title</string>
    <string name="select_service">Choose service</string>
    <string name="select_executor">Choose executor</string>
    <string name="select_type">Choose type</string>
    <string name="select_status">Choose status</string>
    <string name="select_priority">Choose priority</string>
    <string name="plane_date_2nd">Plane date</string>
    <string name="expiration_date_2nd">Expiration date</string>
    <string name="select_date">Select date</string>
    <string name="add_description">Add description</string>
    <string name="add_completed_work">Add completed work</string>
    <string name="save">Save</string>
    <string name="ok">OK</string>
    <string name="Cancel">Cancel</string>
    <string name="by_priority">By priority</string>
    <string name="by_status">By status</string>
    <string name="by_service">By service</string>
    <string name="by_kind">By kind</string>
    <string name="by_period">By creation date</string>
    <string name="expired">Expired</string>
    <string name="my_tickets">My applications</string>
    <string name="reset_all">Reset all</string>
    <string name="ticket_create_success">Application successfully created</string>
    <string name="fill_all_fields_with_star">Fill all fields with star</string>
    <string name="change_language">Change language</string>
    <string name="change_theme">Dark theme</string>
    <string name="change_password">Change password</string>
    <string name="exit">Exit</string>
</resources>