<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    style="@style/Theme.Sidiay.DefaultTheme"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".presentation.fragments.start.SignInFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:id="@+id/f_sign_in_right_triangle_image"
            android:layout_width="300dp"
            android:layout_height="200dp"
            android:rotationY="180"
            android:src="@drawable/black_triangle"
            style="@style/Widget.Sidiay.Icon.SignIn.Right"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/f_sign_in_left_triangle_image"
            android:layout_width="300dp"
            android:layout_height="200dp"
            style="@style/Widget.Sidiay.Icon.SignIn.Left"
            android:src="@drawable/orange_triangle"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/textView"
            style="@style/Widget.Sidiay.Text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif-thin"

            android:text="@string/kron_application"
            android:textSize="30sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.25">

        </TextView>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/f_auth_email_container"
            style="@style/Widget.Sidiay.TextInputLayer"
            android:layout_width="match_parent"
            android:layout_height="85dp"
            android:layout_marginStart="60dp"
            android:layout_marginTop="80dp"
            android:layout_marginEnd="60dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView"
            app:layout_constraintVertical_bias="0.0">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/f_auth_email"
                style="@style/Widget.Sidiay.EditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/login"
                android:inputType="textEmailAddress"
                android:maxLength="32"
                android:text="scx0503@gmail.com" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/f_auth_password_container"
            style="@style/Widget.Sidiay.TextInputLayer"
            android:layout_width="match_parent"
            android:layout_height="85dp"
            android:layout_marginStart="60dp"
            android:layout_marginEnd="60dp"
            app:endIconMode="password_toggle"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/f_auth_email_container">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/f_auth_password"
                style="@style/Widget.Sidiay.EditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/password"
                android:inputType="textPassword"
                android:maxLength="32"
                android:text="Ruslan3" />
        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/f_auth_button"
            style="@style/Widget.Sidiay.Button"
            android:layout_width="200dp"
            android:layout_height="60dp"
            android:layout_marginTop="30dp"
            android:text="@string/sign_in"
            app:layout_constraintEnd_toEndOf="@+id/f_auth_password_container"
            app:layout_constraintStart_toStartOf="@+id/f_auth_password_container"
            app:layout_constraintTop_toBottomOf="@+id/f_auth_password_container" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:text="@string/LLC"
            android:textSize="15sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent">

        </TextView>

    </androidx.constraintlayout.widget.ConstraintLayout>
</FrameLayout>